# cargo-deps-list

./: Cargo.toml  README.md
src/: main.rs
