[package]
name = "cargo-deps-order"
version = "0.0.3"
edition = "2021"
description = "A Cargo subcommand to list dependencies in a workspace and execute commands on them."
license = "MIT"
repository = "https://github.com/piot/cargo-deps-order"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
    "command-line-utilities"
]
keywords = ["cargo", "dependencies"]

[dependencies]
anyhow = "1.0.91"
cargo_metadata = "0.18.1"
clap = { version = "4.5.20", features = ["derive"] }
